@@ -101,17 +101,17 @@ telegram=|2e44333003020100071b7a634820252f2f0265840842658308820165950802fb1aae01
 # Test Lansen door window telegram
 
 telegram=|2e44333005020100071d7ab54800002f2f02fd1b110002fd971d01000efd3a2200000000008e40fd3a000000000000|
-{"media":"reserved","meter":"lansendw","name":"Dooro","id":"00010205","status":"CLOSED","counter_a_int":22,"counter_b_int":0,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"reserved","meter":"lansendw","name":"Dooro","id":"00010205","status":"CLOSED","a_counter":22,"b_counter":0,"timestamp":"1111-11-11T11:11:11Z"}
 |Dooro;00010205;CLOSED;1111-11-11 11:11.11
 
 telegram=|2e44333005020100071d7ab66800002f2f02fd1b550002fd971d01000efd3a2300000000008e40fd3a000000000000|
-{"media":"reserved","meter":"lansendw","name":"Dooro","id":"00010205","status":"OPEN","counter_a_int":23,"counter_b_int":0,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"reserved","meter":"lansendw","name":"Dooro","id":"00010205","status":"OPEN","a_counter":23,"b_counter":0,"timestamp":"1111-11-11T11:11:11Z"}
 |Dooro;00010205;OPEN;1111-11-11 11:11.11
 
 # Test Lansen pulse counter
 
 telegram=|234433300602010014007a8e0000002f2f0efd3a1147000000008e40fd3a341200000000|
-{"media":"other","meter":"lansenpu","name":"Countero","id":"00010206","counter_a_int":4711,"counter_b_int":1234,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"other","meter":"lansenpu","name":"Countero","id":"00010206","a_counter":4711,"b_counter":1234,"timestamp":"1111-11-11T11:11:11Z"}
 |Countero;00010206;4711.000000;1234.000000;1111-11-11 11:11.11
 
 # Test BMEters RFM-AMB Temperature Hygrometer telegram
@@ -294,7 +294,7 @@ telegram=76442104710007612507727100076121042507B5006005E2E95A3C2A1279A5415E67326
 
 # Test Unismart Gas Meter
 telegram=|6044B8059430040001037A1D005085E2B670BCF1A5C87E0C1A51DA18924EF984613DA2A9CD39D8F4C7208326C76D42DBEADF80D574192B71BD7C4F56A7F1513151768A9DB804883B28CB085CA2D0F7438C361CB9E2734712ED9BFBB2A14EF55208|
-{"media":"gas","meter":"unismart","name":"GasMeter","id":"00043094","fabrication_no":"3162296","total_date_time":"2021-09-15 13:18","total_m3":917,"target_date_time":"2021-09-01 06:00","target_m3":911.32,"version":"UGG4","device_date_time":"2021-09-15 13:18","suppler_info":"00","status":"F00C","parameter_set":"02","other_int":20,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"gas","meter":"unismart","name":"GasMeter","id":"00043094","fabrication_no":"3162296","total_date_time":"2021-09-15 13:18","total_m3":917,"target_date_time":"2021-09-01 06:00","target_m3":911.32,"version":"UGG4","device_date_time":"2021-09-15 13:18","suppler_info":"00","status":"F00C","parameter_set":"02","other_counter":20,"timestamp":"1111-11-11T11:11:11Z"}
 |GasMeter;00043094;917.000000;911.320000;1111-11-11 11:11.11
 
 # Test Hydrocal M3 heat/cooling meter
@@ -314,10 +314,10 @@ telegram=|3C449344957002372337725880226793442304DC0000200C05043900004C0500000000
 
 # Test QSmoke smoke detector this one is not yet understood.
 telegram=|3E44934486707945211A7801FD08F081027C034955230082026CFFFF81037C034C41230082036CFFFF03FD17000000326CFFFF046D0F0ABC2B02FDAC7E1100|
-{"media":"smoke detector","meter":"qsmoke","name":"QSmokeo","id":"45797086","status":"WOOT","counter_int":0,"device_date_time":"2021-11-28 10:15","timestamp":"1111-11-11T11:11:11Z"}
+{"media":"smoke detector","meter":"qsmoke","name":"QSmokeo","id":"45797086","status":"WOOT","counter_counter":0,"device_date_time":"2021-11-28 10:15","timestamp":"1111-11-11T11:11:11Z"}
 |QSmokeo;45797086;WOOT;1111-11-11 11:11.11
 
 # Test another QSmoke detector, not understood either.
 telegram=|3744934450881248231A7A5C00002081027C034955230082026CFFFF81037C034C41230082036CFFFF02FD170000326CFFFF046D2514BC2B|
-{"media":"smoke detector","meter":"qsmoke","name":"QSmokep","id":"48128850","status":"WOOT","counter_int":0,"device_date_time":"2021-11-28 20:37","timestamp":"1111-11-11T11:11:11Z"}
+{"media":"smoke detector","meter":"qsmoke","name":"QSmokep","id":"48128850","status":"WOOT","counter_counter":0,"device_date_time":"2021-11-28 20:37","timestamp":"1111-11-11T11:11:11Z"}
 |QSmokep;48128850;WOOT;1111-11-11 11:11.11
