@@ -15,11 +15,11 @@ cat > $TEST/test_expected.txt <<EOF
 (meter) Not printing this warning again for id: 00010205 mfct: (LAS) Lansen Systems, Sweden (0x3033) type: Unknown (0xff) ver: 0x07
 (meter) please consider opening an issue at https://github.com/weetmuts/wmbusmeters/
 (meter) to add support for this unknown mfct,media,version combination
-{"media":"Unknown","meter":"lansendw","name":"Dorren","id":"00010205","status":"OPEN","counter_a_int":23,"counter_b_int":0,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"Unknown","meter":"lansendw","name":"Dorren","id":"00010205","status":"OPEN","a_counter":23,"b_counter":0,"timestamp":"1111-11-11T11:11:11Z"}
 (meter) Forren: meter detection did not match the selected driver lansensm! correct driver is: lansendw
 (meter) Not printing this warning again for id: 00010206 mfct: (LAS) Lansen Systems, Sweden (0x3033) type: Reserved for sensors (0x1d) ver: 0x07
 {"media":"reserved","meter":"lansensm","name":"Forren","id":"00010206","status":"OK","timestamp":"1111-11-11T11:11:11Z"}
-{"media":"Unknown","meter":"lansendw","name":"Dorren","id":"00010205","status":"OPEN","counter_a_int":23,"counter_b_int":0,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"Unknown","meter":"lansendw","name":"Dorren","id":"00010205","status":"OPEN","a_counter":23,"b_counter":0,"timestamp":"1111-11-11T11:11:11Z"}
 {"media":"reserved","meter":"lansensm","name":"Forren","id":"00010206","status":"OK","timestamp":"1111-11-11T11:11:11Z"}
 EOF
 
